--- a/EMP/employee/employee.html
+++ b/EMP/employee/employee.html
@@ -1,35 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Employee Dashboard</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
+
     <div class="sidebar">
+
         <h2>Employee Dashboard</h2>
-        <ul>
+
+        <ul class="list">
             <li><a href="#" onclick="showHomePage()">Home</a></li>
             <li><a href="#" onclick="showAllEmployees()">Employees</a></li>
         </ul>
+
         <a href="#" class="profile" onclick="showProfile()">Profile</a>
-        <a href="#" class="logout">Logout</a>
+
+        <div id="line"></div>
+
+        <a href="#" onclick="logout()" class="logout">Logout</a>
     </div>
+
+
     <div class="main-content">
+
         <div id="home-page">
-            <h3>Your Project and Manager</h3>
             <div id="employee-details"></div>
         </div>
-        <div id="employee-list" class="employee-list" style="display: none;">
+
+        <div id="employee-list" class="employee-list">
             <!-- Employee cards will be appended here -->
         </div>
-        <div id="profile-page" style="display: none;">
-            <h3>Your Profile</h3>
+
+        <div id="profile-page">
             <div id="profile-details"></div>
+        </div>
+        <div id="editProfileModal" class="modal">
+            <div class="modal-content">
+                <span class="close" onclick="document.getElementById('editProfileModal').style.display='none'">&times;</span>
+                <h3>Edit Profile</h3>
+                <form id="editProfileForm" onsubmit="submitEditProfileForm(event)">
+                    <input type="hidden" id="editUserId">
+                    <label for="editFullName">Full Name:</label>
+                    <input type="text" id="editFullName" name="fullName" required>
+                    <label for="editUserEmail">Email:</label>
+                    <input type="email" id="editUserEmail" name="userEmail" required>
+                    <label for="editSkills">Skills (comma separated):</label>
+                    <input type="text" id="editSkills" name="skills" required>
+                    <button type="submit">Update Profile</button>
+                </form>
+            </div>
         </div>
         <div id="message" class="message"></div>
     </div>
+
     <script src="employee-scripts.js" defer></script>
 </body>
+
 </html>
