--- a/EMP/employee/employee.html
+++ b/EMP/employee/employee.html
@@ -47,13 +47,13 @@
                 <h3>Edit Profile</h3>
                 <form id="editProfileForm" onsubmit="submitEditProfileForm(event)">
                     <input type="hidden" id="editUserId">
-                    <label for="editFullName">Full Name:</label>
+                    <!-- <label for="editFullName">Full Name:</label>
                     <input type="text" id="editFullName" name="fullName" required>
                     <label for="editUserEmail">Email:</label>
-                    <input type="email" id="editUserEmail" name="userEmail" required>
+                    <input type="email" id="editUserEmail" name="userEmail" required> -->
                     <label for="editSkills">Skills (comma separated):</label>
                     <input type="text" id="editSkills" name="skills" required>
-                    <button type="submit">Update Profile</button>
+                    <button type="submit">Update Skills</button>
                 </form>
             </div>
         </div>
