--- a/EMP/manager/manager.html
+++ b/EMP/manager/manager.html
@@ -5,7 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manager Dashboard</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+    <style>
+        td {
+            padding: 10px; /* Adjust the value as needed */
+        }
+        table {
+    border-spacing: 30px; /* Adjust the value as needed */
+}
+    </style>
+   
 </head>
 
 <body>
@@ -36,17 +47,20 @@
             <div id="manager-details"></div>
         </div>
 
-        <div id="employee" class="employee" style="display: none;">
+        <div id="employee" class="employee">
+
             <div class="employee-filter-section">
                 <h3>Filter Employees by Skills</h3>
                 <label for="skills">Skills (comma separated):</label>
                 <input type="text" id="skills" name="skills">
                 <button onclick="filterEmployees()">Filter</button>
             </div>
+
             <div class="filter-bar">
-                <button onclick="filterEmployees('all')">ALL</button>
-                <button onclick="filterEmployees('assigned')">ASSIGNED</button>
-                <button onclick="filterEmployees('unassigned')">UNASSIGNED</button>
+
+                <button onclick="fetchEmployees('all')">ALL</button>
+                <button onclick="fetchEmployees('unassigned')">UNASSIGNED</button>
+                <button onclick="fetchMyEmployees()">My Team</button>
             </div>
 
             <div id="employee-list" class="employee-list">
@@ -64,9 +78,14 @@
         </div>
         <div id="request" class="request" style="display: none;">
             <button onclick="openRequestModal()" class="button">Add Request</button>
-            <div id="request-list" class="employee-list">
-                <!-- Employee cards will be appended here -->
+        </br>
+    </br>
+      <p><b>Your Requests</b></p>
+
+            <div class="request-list" id="request-list">
+
             </div>
+            
         </div>
         <div id="profile-page" style="display: none;">
             <div id="profile-details"></div>
@@ -104,7 +123,7 @@
 
         <div id="message" class="message"></div>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="manager-scripts.js" defer></script>
 </body>
 
