manager page updated and admin service test cases updated

--- a/webPage/admin/admin.html
+++ b/webPage/admin/admin.html
@@ -75,6 +75,9 @@
         </div>
 
         <div id="request-list" class="request-list">
+            <h3>Request List</h3>
+            <div class="pending" id="pending"></div>
+            <div class="action-taken" id="action-taken"></div>
             <!-- Request tiles will be appended here -->
         </div>
 
