All web pages updated

--- a/webPage/manager/manager.html
+++ b/webPage/manager/manager.html
@@ -111,7 +111,7 @@
                     <label for="requestType">Request Type :</label>
                     <select id="requestType" name="requestType" required>
                         <option value="ASSIGN_EMPLOYEE">Assign Employee</option>
-                        <option value="UNASSIGN_EMPLOYEE">Unassign Empoyee</option>
+                        <option value="UNASSIGN_EMPLOYEE">Unassign Employee</option>
                         <option value="PROJECT_RESOURCE">Project Resource</option>
                     </select>
                     
