--- a/webPage/manager/manager.html
+++ b/webPage/manager/manager.html
@@ -32,9 +32,10 @@
             <li><a href="#" onclick="showAllManagers()">Managers</a></li>
             <li><a href="#" onclick="showAllProjects()">Projects</a></li>
             <li><a href="#" onclick="showRequests()">Request</a></li>
+            <li><a href="#" class="profile" onclick="showProfile()">Profile</a></li>
         </ul>
 
-        <a href="#" class="profile" onclick="showProfile()">Profile</a>
+        
 
         <div class="line"></div>
 
@@ -145,6 +146,23 @@
         </div>
         <div id="message" class="message"></div>
     </div>
+    <div id="changePasswordModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <div class="modal-header">Change Password</div>
+            <div class="modal-body">
+                <label for="userEmail">Email</label>
+                <input type="email" id="userEmail" readonly>
+                <label for="userPassword">New Password</label>
+                <input type="password" id="userPassword" required>
+                <div id="alertMessage" class="alert"></div>
+            </div>
+            <div class="modal-footer">
+                <button onclick="changePassword()">Submit</button>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="manager-scripts.js" defer></script>
 </body>
